deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registration-api
spec:
  replicas: 1
  podManagementPolicy: "Parallel"
  serviceName: "registration-api"
  selector:
    matchLabels:
      app: registration-api
  template:
    metadata:
      labels:
        app: registration-api
    spec:
#      serviceAccountName: oedp-sa
      terminationGracePeriodSeconds: 60
      containers:
        - name: registration-api
          image: 837071794782.dkr.ecr.us-east-1.amazonaws.com/register-api-backend
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: 1
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
