service-network.yml
apiVersion: v1
kind: Service
metadata:
  name: registrationapiservice
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: registration-api
