ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registration
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: registration
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: registrationapiservice
                port:
                  number: 8080
            path: /
            pathType: Prefix
